# codequest-a-lenda-do-kernel

./: CMakeLists.txt  Doxyfile  README.md  relatorio_tecnico_editavel.docx  save_rpg.txt
docs/: diagrama_classes.dot
src/: batalha.cpp  batalha.h  estrategia.cpp  estrategia.h  factories.cpp  factories.h  gerenciador.cpp  gerenciador.h  habilidade.cpp  habilidade.h  inventario.cpp  inventario.h  item.cpp  item.h  jogador.cpp  jogador.h  main.cpp  menu.cpp  menu.h  observer.h  persistencia.cpp  persistencia.h  personagens.cpp  personagens.h  raca.cpp  raca.h
tests/: test_rpg.cpp
